dons connect template and css fix on mobile

--- a/web/themes/custom/myusf/sass/src/main.scss
+++ b/web/themes/custom/myusf/sass/src/main.scss
@@ -56,8 +56,14 @@ body {
 	margin-left: auto;
     margin-right: auto;
     max-width: 1500px;
-    @include media-breakpoint-down(phone) {
+    
+   	@include media-breakpoint-down(phone) {
     	width: 342px;
+	}
+	&.dons-connect {
+		@include media-breakpoint-down(phone) {
+			width:calc(100% - 30px);
+		}
 	}
 	@include media-breakpoint-only(tablet)  { 
 		width: 97%;
